# Vision

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Asuka.slnx  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Vision.sln  config.h.cmake  config.h.msbuild  config.h.msbuild.py  config.h.msbuild.targets  config.h.xmake  index.html  mkdocs.yml  pyproject.toml  requirements.txt  xmake.lua
.github/workflows/: deploy.yml
3D_Reconstruction/: index.html
Ahri/Asuka/: __init__.py  check.py  run_with_transformers.py  run_with_transformers_pipline.py
Ahri/Asuka/agent/: README.md  action.py  agent.py  tools.py  utils.py
Ahri/Asuka/camera/: base.py  opencv.py  realsense.py
Ahri/Asuka/llm/: openai_provider.py
Ahri/Asuka/models/: LeNet5.py  NLPBaseNet.py  ResNet.py  SelfAttention.md  Transformer.py  __init__.py
Ahri/Asuka/stereovision/: base.py
Ahri/Asuka/utils/: __init__.py  cv2_utils.py  one_hot.py  onnx_utils.py  openvino_utils.py  tensorrt_utils.py  yolo_utils.py
Ahri/Asuka/vision/: base.py  ocr.py  pose.py  vit.py
Ahri/LLM/: README.md  requirements.txt
Ahri/LVM/: README.md
Ahri/NLP/: README.md  __init__.py
Ahri/Vision/: __init__.py
Ahri/Vision3D/: README.md  base.py
Camera/: index.html
DataLabling/: index.html
Jetson/: FAQ.md  README.md  index.html
LLM/: index.html
LLM/ComfyUI/: index.html
LLM/FineTunning/: index.html
LLM/Ollama/: index.html
MCP/: index.html
NLP/: index.html
OCR/: ddddocr_learn.py  easyocr_learn.py  paddleocr_learn.py  pyocr_learn.py  pytesseract_learn.py
ONNX/: index.html
PointCloud/: index.html
Pose/: rtmlib_learn.py
SAM/: SAM.md
SSD/: index.html
TensorRT/: index.html
V3D/: README.md  base.py
V3D/docs/: 3DGS.md  NeRF.md  PointCloud.md
ViT/: README.md  vit.py
Vision/: __init__.py
Vision/model/: LeNet5.py  ResNet.py  VGG.py
Vision/utils/: __init__.py  cv2_utils.py  nms.py  onnx.py  onnx_utils.py  plots.py  realsense2_utils.py  tensorrt_utils.py  torch_utils.py
Vision3D/: base.py
Vision3D/docs/: 3DGS.md  3D_Reconstruction.md  PointCloud.md
Vision_learning/: dahua_camera.py  haikang_camera.py
YOLO/: CMakeLists.txt  README.md  YOLOv5_ONNX.cpp  YOLOv5_ONNXRuntime.cpp  YOLOv5_ONNXRuntime.py  YOLOv5_OpenCV_dnn.cpp  index.html  ultralytics_learn.py  ultralytics_learn.sh
ascend_learn/: convert.sh  inference.py
base/: index.html
cmake/: compiler.cmake  install.cmake  library.cmake  package.cmake  utils.cmake
cmake/modules/: FindONNXRuntime.cmake  FindTensorRT.cmake
docs/: 3D_Reconstruction.md  Camera.md  DataLabling.md  Jetson.md  MCP.md  ONNX.md  TensorRT.md  YOLO.md  base.md  metrics.md  module.md  robot.md
docs/LLM/: ComfyUI.md  FineTunning.md  Ollama.md  index.md
ffmpeg_learn/: CMakeLists.txt  README.md  ffmpeg_learn.cpp
framework_learn/keras_learn/: base.py
framework_learn/mindspore_learn/: base.py
framework_learn/paddle_learn/: base.py
framework_learn/pytorch_learn/: base.py  grad.py
include/: Asuka.h  Vision.h  Vision.hpp  color.hpp  ncnn_utils.hpp  onnx.hpp  onnx_utils.hpp  opencv_utils.hpp  openvino_utils.hpp  realsense2_utils.hpp  tensorrt_buffers.cuh  tensorrt_utils.cuh  tensorrt_utils.hpp  torch_utils.hpp  utils.hpp  yolo.hpp
include/Ahri/: Asuka.h  Asuka.hpp  utils.hpp
keyframe/: README.md  keyframe_FFmpeg.ps1  keyframe_katna.py
mediapipe_learn/: README.md  face.py  face_detection.py  face_mesh.py  hand.py  multi_person_pose.py  object_detection.py  object_detection_3D.py  pose.py  pose_counter.py  requirements.txt
metrics/: index.html
module/: index.html
msbuild/: ONNXRuntime.props  OpenVINO_Debug.props  OpenVINO_Release.props  TensorRT.props
ncnn_learn/: README.md
onnx_learn/: CMakeLists.txt  FAQ.md  README.md  convert_to_onnx.py  export_asinh_with_opset9.py  export_custom_operator.py  export_onnx_pytorch.py  export_onnx_torchvision.py  export_torchvision_operator.py  main.cpp  make_onnx_using_onnx_graphsurgeon.py  make_onnx_using_onnx_helper.py  onnx_learn.vcxproj  onnx_learn.vcxproj.filters  subgraph_using_onnx_graphsurgeon.py  transform_layernorm.py  transform_onnx_using_onnx_graphsurgeon.py
opencv_learn/: CMakeLists.txt  README.md  camera.cpp  camera.py  camera_screenshot.py  cascade.py  cv2_utils.py  edge_detection.py  filter.py  haarcascade.py  histogram.py  hough.cpp  hough.py  image_base.cpp  image_base.py  keypoints.cpp  keypoints.py  line_detection.cpp  line_detection.py  main.cpp  main.py  match_template.py  morphological.cpp  morphological.py  moving_detection.cpp  moving_detection.py  opencv_learn.vcxproj  transform.cpp  transform.py  xmake.lua
opencv_learn/docs/: keypoints.md
opengl_learn/: CMakeLists.txt  opengl_learn.cpp
openmmlab_learn/: .gitignore  README.md  detection.py  segmentation.py
openvino_learn/: CMakeLists.txt  convert.py  convert.sh  main.cpp  main.py  openvino_learn.vcxproj  openvino_learn.vcxproj.filters
openvino_learn/plugins/: ahri_leakyrelu_openvino.hpp  ahri_plugin_openvino.cpp  ahri_plugin_openvino.vcxproj  ahri_plugin_openvino.vcxproj.filters  ahri_swish_openvino.hpp  dllmain.cpp  framework.h
realsense_learn/: CMakeLists.txt  FAQ.md  README.md  base.cpp  camera_info.py  capture.cpp  main.cpp  main.py  real_distance.py
robot/: index.html
scripts/: exif.py  huggingface_download.sh  modelscope_download.py  ppt2image.py
search/: search_index.json
stylesheets/: extra.css
tensorrt_learn/: CMakeLists.txt  README.md  ahrinet.py  base.cu  builder.cu  convert.sh  export_custom_operator_scalar.py  export_weights_pytorch.py  inference.cu  main.cpp  main.cu  main.py  plugin.cu  requirements.txt  tensorrt_learn.vcxproj
tensorrt_learn/plugins/: ahri_leakyrelu_tensorrt.cuh  ahri_leakyrelu_tensorrt.hpp  ahri_plugin_tensorrt.cpp  ahri_plugin_tensorrt.cu  ahri_plugin_tensorrt.vcxproj  ahri_plugin_tensorrt.vcxproj.filters  ahri_swish_tensorrt.cuh  ahri_swish_tensorrt.hpp  pch.h
tensorrt_learn/plugins/kernels/: leakyrelu.cu  leakyrelu.cuh  swish.cu  swish.cuh
tests/: test_tensorrt_utils.py
triton_learn/: main.py
utils/: __init__.py
(+67 files in other folders)
