[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Vision"
version = "0.0.1"
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
dependencies = ["numpy", "opencv-contrib-python", "loguru"]

[project.optional-dependencies]
dev = ["isort", "ruff", "black"]
test = ["pytest"]
pytorch = [
    "timm", # https://github.com/rwightman/pytorch-image-models
]
tensorrt = ["tensorrt", "cuda-python", "pycuda", "ploygraphy"]
onnx = [
    "onnx",              # https://github.com/onnx/onnx
    "onnx-graphsurgeon", # in TensorRT or `pip install onnx_graphsurgeon --index-url https://pypi.ngc.nvidia.com`
    "onnxruntime-gpu",   # https://github.com/microsoft/onnxruntime or onnxruntime(cpu ver.)
    # "onnxruntime",
    "onnxsim", # https://github.com/daquexian/onnx-simplifier same as `onnx-simplifier`
    # "onnx-simplifier",
    "onnxruntime-extensions", # https://github.com/microsoft/onnxruntime-extensions
]
vit = [
    "vit-pytorch", # https://github.com/lucidrains/vit-pytorch
]
mediapipe = ["mediapipe"]
tracking = ["boxmot"]
opencv = [
    "imutils",               # https://github.com/PyImageSearch/imutils
    "cv2_enumerate_cameras", # https://github.com/chinaheyu/cv2_enumerate_cameras
]
pose = ["rtmlib"]
ocr = ["pytesseract", "pyocr", "easyocr"]
video = [
    "moviepy", # https://github.com/Zulko/moviepy
]

[tool.rye]
dev-dependencies = ["pytest>=8.2.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Ahri"]

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
select = [
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",  # pandas-vet
    "NPY", # numpy specific rules
    "RUF", # ruff specific rules
]
ignore = [
    "E501",   # line too long
    "RUF003", # ambiguous-unicode-character-comment
    "RUF012", # mutable-class-default
]
ignore-init-module-imports = true

[tool.ruff.isort]

[tool.ruff.pydocstyle]
convention = "google"
